--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "src"
 version = "0.0.1"
-description = "An MLOps project for productionizing models"
+description = "An AI-hedge fund trading"
 authors = [{name = "Talkeen Ahmad Nomani", email = "talkeennomani@gmail.com"}]
 
 [tool.setuptools]
